Fixed another spacing issue

--- a/styles.css
+++ b/styles.css
@@ -299,6 +299,7 @@ body::-webkit-scrollbar-thumb {
   width: 100%;
   font-size: 20px;
   margin-bottom: 0;
+  margin-right: 0;
 }
 
 .exp-title {
